# tool-dx-demo

./: .flake8  .gitignore  GNUmakefile  README.md  pyproject.toml  requirements.txt  rest.http
cli/: Dockerfile  tool.sh
client/: Dockerfile  main.py  requirements.txt
server/: Dockerfile  main.py  models.py  requirements.txt
